@@ -23,6 +23,6 @@ var lmsOptions = {newMusicLimit: 100,
                   showComposer: getLocalStorageBool('showComposer', true),
                   showBand: getLocalStorageBool('showBand', true),
                   volumeStep: parseInt(getLocalStorageVal('volumeStep', 5)),
-                  respectFixedVol: getLocalStorageBool('respectFixedVol', true),
+                  respectFixedVol: getLocalStorageVal('respectFixedVol', VOL_FIXED),
                   showAllArtists: getLocalStorageBool('showAllArtists', true),
                   artistFirst: getLocalStorageBool('artistFirst', true)};
