@@ -94,13 +94,20 @@ PLUGIN_MATERIAL_SKIN_PASSWORD_DESC
 	FR	Définir un mot de passe pour contrôler l'accès aux alarmes et aux paramètres du serveur.
 	NL	Stel een wachtwoord in om de toegang tot wekkers en serverinstellingen te regelen.
 
-PLUGIN_MATERIAL_SKIN_RESPECT_FIXED_VOL
-	EN	Support fixed volume
-	FR	Gestion des platines à volume fixe
+PLUGIN_MATERIAL_SKIN_FIXED_VOL
+	EN	Fixed volume players
 
-PLUGIN_MATERIAL_SKIN_RESPECT_FIXED_VOL_DESC
-	EN	Disable volume slider, and hide volume level, for players with fixed volume.
-	FR	Désactiver le curseur de volume et masquer le niveau de volume pour les platines à volume fixe.
+PLUGIN_MATERIAL_SKIN_FIXED_VOL_DESC
+	EN	How should player's with a fixed volume be controlled?
+
+PLUGIN_MATERIAL_SKIN_FIXED_VOL_HIDE
+	EN	Hide volume control
+
+PLUGIN_MATERIAL_SKIN_FIXED_VOL_SPECIAL
+	EN	Disable volume slider, and hide volume level
+
+PLUGIN_MATERIAL_SKIN_FIXED_VOL_NORMAL
+	EN	Display standard volume control
 
 PLUGIN_MATERIAL_SKIN_ARTIST_FIRST
 	EN	Show artist first in now-playing and queue
