@@ -18,6 +18,7 @@
 12. Re-title MAI views to 'Artist', 'Album', and 'Track'
 13. Add album list to MAI 'Artist' view.
 14. Add track list to MAI 'Album' view.
+15. Add, server-side, option to hide volume controls for fixed volume players.
 
 2.3.7
 -----
